tests/golden/errors/underscore_in_binding.kso
type user
  admin: bool
  name: string

fn main
  user _ name = user false "clay"
  print "{name}"
